<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="@drawable/bg_med">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/buttonAdd"
        android:textSize="36sp"
        android:clickable="true"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="addClass"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drop"
        android:id="@+id/buttonDrop"
        android:textSize="36sp"
        android:clickable="true"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/buttonAdd"
        android:layout_centerHorizontal="true"
        android:onClick="dropClass"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attend"
        android:id="@+id/buttonAttend"
        android:textSize="36sp"
        android:clickable="true"
        android:layout_below="@+id/buttonDrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:onClick="attend"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:id="@+id/buttonCheck"
        android:textSize="32sp"
        android:clickable="true"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/buttonAttend"
        android:layout_centerHorizontal="true"
        android:onClick="checkAttendance"/>

</RelativeLayout>
